--- a/mail/templates/mail/layout.html
+++ b/mail/templates/mail/layout.html
@@ -1,21 +1,27 @@
 {% load static %}
+{% load django_vite %}
 
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        {% comment %} {% vite_hmr_client %} {% endcomment %}
+        <script type="module" src="http://localhost:3000/@vite/client"></script>
+
         <title>{% block title %}Mail{% endblock %}</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <link 
-            rel="stylesheet" 
-            href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" 
-            integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" 
-            crossorigin="anonymous"
-        >
+        <link
+            rel="shortcut icon" 
+            type="image/png" 
+            href="{% vite_asset_url 'img/favicons/favicon-mail-color-120.png' %}"
+        />
+        
+        {% vite_asset 'js/main.js' async="async" %}
 
-        <link rel="stylesheet" href="{% static 'mail/styles.css' %}">
-
-        {% block script %}
-        {% endblock %}
+        {% comment %} Blocks to Custom or Local Styles and/or Scripts {% endcomment %}
+        {% block custom_style %}{% endblock %}
+        {% block custom_script %}{% endblock %}
     </head>
     
     <body>
