--- a/mail/templates/mail/layout.html
+++ b/mail/templates/mail/layout.html
@@ -18,10 +18,6 @@
         />
         
         {% vite_asset 'js/main.js' async="async" %}
-
-        {% comment %} Blocks to Custom or Local Styles and/or Scripts {% endcomment %}
-        {% block custom_style %}{% endblock %}
-        {% block custom_script %}{% endblock %}
     </head>
     
     <body>
@@ -29,5 +25,7 @@
             {% block body %}
             {% endblock %}
         </div>
+
+        {% block script %}{% endblock script %}
     </body>
 </html>
