--- a/mail/templates/mail/layout.html
+++ b/mail/templates/mail/layout.html
@@ -21,6 +21,29 @@
     </head>
     
     <body>
+        <div id="messagesConteiner" class="position-absolute top-0 left-0 w-100">
+            {% comment %} here feedback messages are displayed {% endcomment %}
+            <div id="toastWrapper" class="d-flex justify-content-end">
+                <div 
+                    class="toast align-items-center text-bg-primary border-0 m-5" 
+                    role="alert" 
+                    aria-live="assertive" 
+                    aria-atomic="true"
+                >
+                    <div class="d-flex">
+                        <div id="messageContent" class="toast-body fw-semibold mx-auto"></div>
+
+                        <button 
+                            type="button" 
+                            class="btn-close me-2 m-auto" 
+                            data-bs-dismiss="toast" 
+                            aria-label="Close"
+                        ></button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
         <div class="container">
             {% block body %}
             {% endblock %}
