--- a/mail/templates/mail/inbox.html
+++ b/mail/templates/mail/inbox.html
@@ -14,6 +14,15 @@
     <hr>
 
     <div id="emails-view">
+        <div id="mailboxTitle"></div>
+
+        <div id="mailboxContent">
+            <div id="emptyBoxContent" class="d-none fs-1 fw-bold text-secondary m-auto p-5">
+                No e-mails here...
+            </div>
+
+            <div id="listBoxContent" class="container"></div>
+        </div>
     </div>
 
     <div id="compose-view">
