[mailbox] all requirements for mailbox  are implemented.

--- a/mail/templates/mail/layout.html
+++ b/mail/templates/mail/layout.html
@@ -44,7 +44,12 @@
             </div>
 
             <template id="emailListItemTemplate">
-                <div class="row emaiListItem border-bottom border-1 border-secondary my-2 cursor-pointer" onclick="openMail(this.dataset.id)" data-mail-id="" data-mail-status="">
+                <div 
+                    class="row emaiListItem border-bottom border-1 border-secondary my-2 cursor-pointer" 
+                    onclick="openMail(event, this.dataset.mailId)" 
+                    data-mail-id="" 
+                    data-mail-status=""
+                >
                     <div class="col-auto sender">From: <span data-mail-sender></span></div>
                     <div class="col subject">Subject: <span data-mail-subject></span></div>
                     <div class="col-auto timestamp">Timestamp: <span data-mail-timestamp></span></div>
