--- a/mail/templates/mail/inbox.html
+++ b/mail/templates/mail/inbox.html
@@ -46,6 +46,36 @@
             <input type="submit" class="btn btn-primary"/>
         </form>
     </div>
+
+    <div id="ajaxEmailModal" class="modal" tabindex="-1">
+        <div class="modal-dialog modal-fullscreen">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title mail-subject">Modal title</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+        
+                <div class="modal-body">
+                    <p>From: <span class="mail-sender"></span>, to: <span class="mail-recipients"></span>.</p>
+                    <span class="mail-timestamp"></span>
+                    <hr>
+
+                    <p class="mail-body"></p>
+                </div>
+        
+                <div class="modal-footer">
+                    <button 
+                        type="button" 
+                        class="mail-archived btn btn-primary"
+                        data-mail-archived=""
+                        data-mail-id=""
+                        onclick="mailArchiveRequestHandler(event, this.dataset.mailId, this.dataset.mailArchived)"
+                    >
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock %}
 
 {% block script %}
