[design-ux-ui] Improvements on body container at layout and register section redesign.

--- a/mail/templates/mail/layout.html
+++ b/mail/templates/mail/layout.html
@@ -185,7 +185,7 @@
                 </template>
             </div>
     
-            <div class="container">
+            <div class="container d-flex vh-100">
                 {% block body %}
                 {% endblock %}
             </div>
