--- a/mail/templates/mail/register.html
+++ b/mail/templates/mail/register.html
@@ -1,27 +1,66 @@
 {% extends "mail/layout.html" %}
 
 {% block body %}
+    <div class="mt-5 mb-auto mx-auto">
+        {% if message %}
+            <div class="row g-0 my-4">
+                <div class="col-12 border border-2 rounded-pill border-danger-subtle text-danger py-2">
+                    <h6 class="text-center m-auto">{{ message }}</h6>
+                </div>
+            </div>
+        {% endif %}
 
-    <h2>Register</h2>
+        <div class="row g-0 my-4">
+            <div class=" col-12 card border-2 shadow-lg">
+                <div class="card-header">
+                    <h2>Register</h2>
+                </div>
+    
+                <div class="card-body row">
+                    <form action="{% url 'register' %}" method="post">
+                        {% csrf_token %}
 
-    {% if message %}
-        <div>{{ message }}</div>
-    {% endif %}
+                        <div class="form-floating col-12 my-3">
+                            <input 
+                                class="form-control" 
+                                id="registerEail" 
+                                type="email" 
+                                name="email" 
+                                placeholder="example@open-mail.com"
+                            >
+                            <label for="registerEail">Email Address</label>
+                        </div>
 
-    <form action="{% url 'register' %}" method="post">
-        {% csrf_token %}
-        <div class="form-group">
-            <input class="form-control" type="email" name="email" placeholder="Email Address">
+                        <div class="form-floating col-12 my-3">
+                            <input 
+                                class="form-control" 
+                                id="registerPassword" 
+                                type="password" 
+                                name="password" 
+                                placeholder="Password"
+                            >
+                            <label for="egisterPassword">Password</label>
+                        </div>
+
+                        <div class="form-floating col-12 my-3">
+                            <input 
+                                class="form-control" 
+                                id="registerPwdConfirmation" 
+                                type="password" 
+                                name="confirmation" 
+                                placeholder="Password"
+                            >
+                            <label for="registerPwdConfirmation">Confirm Password</label>
+                        </div>
+
+                        <input class="btn btn-primary mt-2" type="submit" value="Register">
+                    </form>
+                </div>
+    
+                <div class="card-footer">
+                    Already have an account? <a href="{% url 'login' %}">Log In here.</a>
+                </div>
+            </div>
         </div>
-        <div class="form-group">
-            <input class="form-control" type="password" name="password" placeholder="Password">
-        </div>
-        <div class="form-group">
-            <input class="form-control" type="password" name="confirmation" placeholder="Confirm Password">
-        </div>
-        <input class="btn btn-primary" type="submit" value="Register">
-    </form>
-
-    Already have an account? <a href="{% url 'login' %}">Log In here.</a>
-
+    </div>
 {% endblock %}
