[design-ux-ui] last improvements was  spread to login section and fix for typo at register section.

--- a/mail/templates/mail/register.html
+++ b/mail/templates/mail/register.html
@@ -39,7 +39,7 @@
                                 name="password" 
                                 placeholder="Password"
                             >
-                            <label for="egisterPassword">Password</label>
+                            <label for="registerPassword">Password</label>
                         </div>
 
                         <div class="form-floating col-12 my-3">
