--- a/mail/templates/mail/login.html
+++ b/mail/templates/mail/login.html
@@ -1,24 +1,56 @@
 {% extends "mail/layout.html" %}
 
 {% block body %}
+    <div class="mt-5 mb-auto mx-auto">
+        {% if message %}
+            <div class="row g-0 my-4">
+                <div class="col-12 border border-2 rounded-pill border-danger-subtle text-danger py-2">
+                    <h6 class="text-center m-auto">{{ message }}</h6>
+                </div>
+            </div>
+        {% endif %}
 
-    <h2>Login</h2>
+        <div class="row g-0 my-4">
+            <div class=" col-12 card border-2 shadow-lg">
+                <div class="card-header">
+                    <h2>Login</h2>
+                </div>
 
-    {% if message %}
-        <div>{{ message }}</div>
-    {% endif %}
+                <div class="card-body row">
+                    <form action="{% url 'login' %}" method="post">
+                        {% csrf_token %}
 
-    <form action="{% url 'login' %}" method="post">
-        {% csrf_token %}
-        <div class="form-group">
-            <input autofocus class="form-control" type="email" name="email" placeholder="Email">
+                        <div class="form-floating col-12 my-3">
+                            <input 
+                                autofocus
+                                class="form-control" 
+                                id="loginEmail" 
+                                type="email" 
+                                name="email" 
+                                placeholder="exemple@open-mail.com"
+                            >
+                            <label for="loginEmail">Email</label>
+                        </div>
+
+                        <div class="form-floating col-12 my-3">
+                            <input 
+                                class="form-control" 
+                                id="loginPassword" 
+                                type="password" 
+                                name="password" 
+                                placeholder="Password"
+                            >
+                            <label for="loginPassword">Password</label>
+                        </div>
+
+                        <input class="btn btn-primary mt-2" type="submit" value="Login">
+                    </form>
+                </div>
+
+                <div class="card-footer">
+                    Don't have an account? <a href="{% url 'register' %}">Register here.</a>
+                </div>
+            </div>
         </div>
-        <div class="form-group">
-            <input class="form-control" type="password" name="password" placeholder="Password">
-        </div>
-        <input class="btn btn-primary" type="submit" value="Login">
-    </form>
-
-    Don't have an account? <a href="{% url 'register' %}">Register here.</a>
-
+    </div>
 {% endblock %}
