--- a/mail/templates/mail/inbox.html
+++ b/mail/templates/mail/inbox.html
@@ -4,47 +4,53 @@
 
 
 {% block body %}
-    <h2>{{ request.user.email }}</h2>
+    <div class="mx-auto">
+        <nav class="navbar fixed-top text-bg-primary align-items-center px-4 py-3">
+            <h6 class="cursor-default my-0 ms-0 me-auto">{{ request.user.email }}</h6>
 
-    <button class="btn btn-sm btn-outline-primary" id="inbox">Inbox</button>
-    <button class="btn btn-sm btn-outline-primary" id="compose">Compose</button>
-    <button class="btn btn-sm btn-outline-primary" id="sent">Sent</button>
-    <button class="btn btn-sm btn-outline-primary" id="archived">Archived</button>
-    <a class="btn btn-sm btn-outline-primary" href="{% url 'logout' %}">Log Out</a>
-    <hr>
-
-    <div id="emails-view">
-        <div id="mailboxTitle"></div>
-
-        <div id="mailboxContent">
-            <div id="emptyBoxContent" class="d-none fs-1 fw-bold text-secondary m-auto p-5">
-                No e-mails here...
+            <div class="nav-option mx-auto overflow-y-hidden">
+                <button class="btn btn-sm btn-outline-light me-2" id="inbox">Inbox</button>
+                <button class="btn btn-sm btn-outline-light me-2" id="compose">Compose</button>
+                <button class="btn btn-sm btn-outline-light me-2" id="sent">Sent</button>
+                <button class="btn btn-sm btn-outline-light" id="archive">Archived</button>
             </div>
 
-            <div id="listBoxContent" class="container"></div>
+            <a class="btn btn-sm btn-outline-light ms-auto me-0" href="{% url 'logout' %}">Log Out</a>
+        </nav>
+
+        <div id="emails-view" class="pt-5 mt-5">
+            <div id="mailboxTitle"></div>
+
+            <div id="mailboxContent">
+                <div id="emptyBoxContent" class="d-none fs-1 fw-bold text-secondary m-auto p-5">
+                    No e-mails here...
+                </div>
+
+                <div id="listBoxContent" class="container"></div>
+            </div>
         </div>
-    </div>
 
-    <div id="compose-view">
-        <h3>New Email</h3>
+        <div id="compose-view" class="pt-5 mt-5">
+            <h3>New Email</h3>
 
-        <form id="compose-form" onsubmit="send_mail(event)">
-            <div class="form-group">
-                From: <input name="origin" disabled class="form-control" value="{{ request.user.email }}">
-            </div>
+            <form id="compose-form" onsubmit="send_mail(event)">
+                <div class="form-group">
+                    From: <input name="origin" disabled class="form-control" value="{{ request.user.email }}">
+                </div>
 
-            <div class="form-group">
-                To: <input name="recipients" id="compose-recipients" class="form-control" required>
-            </div>
+                <div class="form-group">
+                    To: <input name="recipients" id="compose-recipients" class="form-control" required>
+                </div>
 
-            <div class="form-group">
-                <input name="subject" class="form-control" id="compose-subject" placeholder="Subject">
-            </div>
+                <div class="form-group">
+                    <input name="subject" class="form-control" id="compose-subject" placeholder="Subject">
+                </div>
 
-            <textarea name="body" class="form-control" id="compose-body" placeholder="Body"></textarea>
+                <textarea name="body" class="form-control" id="compose-body" placeholder="Body"></textarea>
 
-            <input type="submit" class="btn btn-primary"/>
-        </form>
+                <input type="submit" class="btn btn-primary"/>
+            </form>
+        </div>
     </div>
 
     <div id="ajaxEmailModal" class="modal" tabindex="-1">
