[desing-ux-ui] mailbox container improvements with scroll based behavior.

--- a/mail/templates/mail/inbox.html
+++ b/mail/templates/mail/inbox.html
@@ -19,9 +19,9 @@
         </nav>
 
         <div id="emails-view" class="pt-5 mt-5">
-            <div id="mailboxTitle"></div>
+            <div id="mailboxTitle" class="mb-2"></div>
 
-            <div id="mailboxContent">
+            <div id="mailboxContent" class="scrolledTop px-2">
                 <div id="emptyBoxContent" class="d-none fs-1 fw-bold text-secondary m-auto p-5">
                     No e-mails here...
                 </div>
