--- a/mail/static/mail/scss/custom.scss
+++ b/mail/static/mail/scss/custom.scss
@@ -11,6 +11,8 @@ main {
 .cursor-default {
   cursor: default;
 }
+
+// navbar - animatiion and active page indication
 .nav-option button {
   box-shadow: none;
   transition: all 100ms ease-in;
@@ -20,4 +22,39 @@ main {
 	font-weight: bold;
 	pointer-events: none;
   box-shadow: inset white 0 0 2px;
+}
+
+//  Mailboxes
+#emails-view {
+  #mailboxContent {
+    height: 75vh;
+    overflow-x: hidden;
+    overflow-y: scroll;
+    position: relative;
+    &::after, &::before {
+      content: '';
+      display: block;
+      position: sticky;
+      pointer-events: none;
+      width: 100%;
+      height: 40px;
+      z-index: 9;
+      backdrop-filter: blur(1px);
+    }
+    &::before {
+      top: 0px;
+      background: linear-gradient(to top, transparent, rgba(255, 255, 255, 0.75));
+    }
+    &::after {
+      bottom: 0px;
+      background: linear-gradient(to bottom, transparent, rgba(255, 255, 255, 0.75));
+    }
+    // dinamic hide and show pseudoElements based on scroll State
+    &.scrolledTop::before {
+      display: none;
+    }
+    &.scrolledBottom::after {
+      display: none;
+    }
+  }
 }
