--- a/mail/templates/mail/layout.html
+++ b/mail/templates/mail/layout.html
@@ -173,14 +173,25 @@
     
                 <template id="emailListItemTemplate">
                     <div 
-                        class="row emaiListItem border-bottom border-1 border-secondary my-2 cursor-pointer" 
+                        class="row emaiListItem border-bottom border-2 border-secondary cursor-pointer" 
                         onclick="openMail(event, this.dataset.mailId)" 
                         data-mail-id="" 
                         data-mail-status=""
                     >
-                        <div class="col-auto sender">From: <span data-mail-sender></span></div>
-                        <div class="col subject">Subject: <span data-mail-subject></span></div>
-                        <div class="col-auto timestamp">Timestamp: <span data-mail-timestamp></span></div>
+                        <div class="col sender">
+                            <span class="emailListItem_label">From: </span>
+                            <span data-mail-sender></span>
+                        </div>
+
+                        <div class="col-auto timestamp">
+                            <span class="emailListItem_label">At: </span>
+                            <span data-mail-timestamp></span>
+                        </div>
+
+                        <div class="col-12 subject">
+                            <span class="emailListItem_label">Subject: </span>
+                            <span data-mail-subject></span>
+                        </div>
                     </div>
                 </template>
             </div>
