--- a/mail/static/mail/scss/custom.scss
+++ b/mail/static/mail/scss/custom.scss
@@ -64,8 +64,10 @@ main {
 	border-radius: 1rem;
 	font-size: 14px;
 	margin-bottom: 1.3rem !important;
-	padding-top: 0.5rem;
-	padding-bottom: 0.5rem;
+	padding-top: 0.3rem;
+	padding-bottom: 0.3rem;
+  padding-left: 0.6rem;
+  padding-right: 0.6rem;
   &.readed {
     opacity: 80%;
     background-color: $gray-600;
@@ -79,5 +81,8 @@ main {
     font-size: 0.7rem;
     font-style: italic;
     margin-right: 0.5rem;
+  }
+  &:hover {
+    box-shadow: 0 0 5px $dark;
   }
 }
